@@ -206,7 +206,7 @@
       (lambda (op)
 	(case op
 	  ((set) (lambda (x)
-		   (gtk-combo-box-set-active combo (option-index options x))))
+		   (gtk-combo-box-set-active combo (or (option-index options x) 0))))
 	  ((clear) nop)
 	  ((ref) (lambda () (string->symbol (symbol-name (nth (gtk-combo-box-get-active combo) options)))))
 	  ((gtk-widget) combo)
@@ -233,7 +233,7 @@
       (lambda (op)
 	(case op
 	  ((set) (lambda (x)
-		   (gtk-combo-box-set-active combo (option-index options x))))
+		   (gtk-combo-box-set-active combo (or (option-index options x) 0))))
 	  ((clear) nop)
 	  ((ref) (lambda () (string->symbol (symbol-name (nth (gtk-combo-box-get-active combo) options)))))
 	  ((gtk-widget) combo)
